--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="formInput"><input type="text" name="myemail" id="" placeholder="Input your email"></div>
         <div class="formInput"><input type="text" name="mycontact" id="" placeholder="Input your contact"></div>
         <div class="formInput"><input type="text" name="myaddress" id="" placeholder="Input your address"></div>
-        <div class="formInput" id="submit">
+        <div id="submit">
             <input type="submit" value="submit">
         </div>
         </form>
