--- a/index.html
+++ b/index.html
@@ -44,7 +44,11 @@
         </div>
         </form>
     </div>
-
+   <footer>
+       <div class="footer">
+           Created by Hamza Tarique❤️
+       </div>
+   </footer>
 </body>
 
 </html>
